--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "@actions/github": "^5.0.0",
     "js-yaml": "^4.1.0",
     "mdast-util-from-markdown": "^1.2.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^9.2.2"
   }
 }
