Add optional value to test template
Ensure parsing doesn't require presence of all body values

--- a/test/fixtures/ISSUE_TEMPLATE/template.yml
+++ b/test/fixtures/ISSUE_TEMPLATE/template.yml
@@ -4,6 +4,12 @@ title: "[Example]"
 labels: ["link"]
 body:
   - type: input
+    id: optionalValue
+    attributes:
+      label: Optional Value
+    validations:
+      required: false
+  - type: input
     id: url
     attributes:
       label: URL
