Add support for image markup

--- a/test/fixtures/ISSUE_TEMPLATE/template.yml
+++ b/test/fixtures/ISSUE_TEMPLATE/template.yml
@@ -22,3 +22,8 @@ body:
       label: Description
     validations:
       required: true
+  - type: markdown
+    id: image
+    attributes:
+      label: Image
+      value: "### Image\n\n> Optional, should be attached after the issue is created"
