--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "onchange -i './src/**/*.js' './test/**/*.js' -- npm run test",
+    "test": "mocha ./test/**/*.js"
   },
   "repository": {
     "type": "git",
