--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
+    "camelcase": "^6.3.0",
     "js-yaml": "^4.1.0",
     "mdast-util-from-markdown": "^1.2.0"
   },
